Fix Cards search screen
--HG--
branch : feature/microservices

--- a/ui/card/index.html
+++ b/ui/card/index.html
@@ -16,7 +16,7 @@
     <script src="{{ hashed("/ui/pkg/bootstrap/js/bootstrap.min.js") }}"></script>
 </head>
 <body>
-<div id="card-banner"><b>{{ service.config.brand }} |</b> {{ service.config.installation_name }}</div>
+<div id="card-banner"><b>{{ brand }} |</b> {{ installation_name }}</div>
 <div class="container-fluid">
     <div class="input-group">
         <input id="query" type="text" class="form-control" placeholder="{{ _("Enter text to search") }}">
